--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
             </symbol>
         </svg>
     </div>
-<div class="div_btn" id='div_wph' style="bottom: 70px; right: 35px;position: fixed; cursor: pointer; width: 42px; height: 42px; border: 2px solid #fff; border-radius: 50%; font-size: 1em; line-height: 40px; text-align: center; z-index: 999; ">
-    <a href="https://mst.vip.com/iYcEvwVGaLI-Bf_5PtVKAQ.php?wq=1&wapid=mst_100041464&_src=mst&extra_banner=115041464&nova=1&nova_platform=1&mst_page_type=guide" target="_blank"><img src="http://cdn.jcelyj.com/assets/TP1ayxwab/banner.jpg" width="45px" height="45px"/></a>
-</div>
+
 <script>
     var aaa = Math.ceil(Math.random()*100);
     console.log(aaa);
@@ -87,7 +85,7 @@
         </div>
         <div class="stage-container remove">
             <div class="page_two hide">
-                <div id="text" style="display:none;"><p>倒计时<br><br>还有<span id="time"></span><br><span id="text1"></span><br>彩蛋:点击屏幕任意地方即可放烟花<br><br><br><span id="copyright"></span></p></div>
+                <div id="text" style="display:none;"><p>倒计时<br><br>还有<span id="time"></span><br><span id="text1"></span><br><br>彩蛋:点击屏幕任意地方即可放烟花<span id="copyright"></span></p></div>
                 <div class="type_words" id="contents" style="font-size:1.15rem;line-height:1.5rem;"></div>
             </div>
             <div class="canvas-container">
